test/files/invalid/defined_twice.fbs
table Foo {}
union Foo {}

table Bar {}

struct A0 {
  x: uint32;
  x: uint8;
}

table A1 {
  x: uint32;
  x: string;
}

enum A2: uint8 {
  X = 0, X = 1
}

union A3 {
  Foo, Foo
}

union A4 {
  X: Foo, X: Bar
}

rpc_service A5 {
  x(string): string;
  x(uint32): uint32;
}
