test/files/invalid/defined_twice.stderr
error: cannot define type Foo twice
  ┌─ test/files/invalid/defined_twice.fbs:1:1
  │
1 │ table Foo {}
  │ ------------ first definition was here
2 │ union Foo {}
  │ ------------ second definition was here

error: cannot define field x twice
  ┌─ test/files/invalid/defined_twice.fbs:7:3
  │
7 │   x: uint32;
  │   ---------- first field was here
8 │   x: uint8;
  │   --------- second field was here

error: cannot define field x twice
   ┌─ test/files/invalid/defined_twice.fbs:12:3
   │
12 │   x: uint32;
   │   ---------- first field was here
13 │   x: string;
   │   ---------- second field was here

error: cannot define variant X twice
   ┌─ test/files/invalid/defined_twice.fbs:17:3
   │
17 │   X = 0, X = 1
   │   ------ ----- second variant was here
   │   │       
   │   first variant was here

error: cannot define union variant with type Foo twice
   ┌─ test/files/invalid/defined_twice.fbs:21:3
   │
21 │   Foo, Foo
   │   ---- --- second variant was here
   │   │     
   │   first variant was here

error: cannot define union variant with name X twice
   ┌─ test/files/invalid/defined_twice.fbs:25:3
   │
25 │   X: Foo, X: Bar
   │   ------- ------ second variant was here
   │   │        
   │   first variant was here

error: cannot define rpc method x twice
   ┌─ test/files/invalid/defined_twice.fbs:29:3
   │
29 │   x(string): string;
   │   ------------------ first method was here
30 │   x(uint32): uint32;
   │   ------------------ second method was here

error: Rpc services are not currently supported
   ┌─ test/files/invalid/defined_twice.fbs:28:1
   │
28 │ rpc_service A5 {
   │ ^^^^^^^^^^^^^^

Error: Bailing because of errors
